[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-planner"
version = "1.0.0"
description = "Task decomposition and execution planning for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Darshankumar Joshi", email = "darshjme@gmail.com" }
]
keywords = ["agents", "planning", "task-decomposition", "execution", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/darshjme-codes/agent-planner"
Repository = "https://github.com/darshjme-codes/agent-planner"
Issues = "https://github.com/darshjme-codes/agent-planner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_planner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/agent_planner"]
